# neural-blueprints

./: .gitignore  .readthedocs.yml  LICENSE  README.md  main.py  mkdocs.yml  pyproject.toml
docs/: getting-started.md  index.md
docs/assets/flowcharts/architectures/: TabBERT.excalidraw
docs/user-guide/: architectures.md  configuration.md
examples/: example_bert.ipynb  example_bert.py  example_cnn.ipynb  example_cnn.py  example_feedforward.py  example_mlp.ipynb  example_mlp.py  example_transformer.py  example_vae.ipynb  example_vae.py
examples/images/: example_cnn.ipynb  example_vae.ipynb
examples/tabular/: example_bert.ipynb  example_mlp.ipynb  example_vae.ipynb
src/neural_blueprints/: __init__.py
src/neural_blueprints/architectures/: __init__.py  autoencoder.py  base.py  cnn.py  gan.py  mlp.py  rnn.py  transformer.py
src/neural_blueprints/base/: __init__.py  neural_network.py
src/neural_blueprints/components/composite/: __init__.py  base.py  decoder.py  discriminator.py  encoder.py  feedforward.py  generator.py  position_embedding.py
src/neural_blueprints/components/composite/projections/: __init__.py  audio.py  base.py  image.py  linear.py  multimodal.py  tabular.py  text.py
src/neural_blueprints/components/composite/projections/input/: __init__.py  base.py  linear.py  multimodal.py  tabular.py
src/neural_blueprints/components/composite/projections/input_projections/: __init__.py  tabular.py
src/neural_blueprints/components/composite/projections/output/: __init__.py  base.py  linear.py  tabular.py
src/neural_blueprints/components/composite/projections/output_projections/: tabular.py
src/neural_blueprints/components/core/: __init__.py  attention.py  base.py  conv.py  dense.py  dropout.py  embedding.py  flatten.py  norm.py  pool.py  projection.py  recurrent.py  reshape.py  residual.py
src/neural_blueprints/config/: __init__.py  architecture.py  architectures.py  composite.py  core.py  utils.py
src/neural_blueprints/config/architectures/: __init__.py  autoencoder.py  base.py  cnn.py  gan.py  mlp.py  rnn.py  transformer.py
src/neural_blueprints/config/components/composite/: __init__.py  base.py  decoder.py  discriminator.py  encoder.py  feedforward.py  generator.py  position_embedding.py
src/neural_blueprints/config/components/core/: __init__.py  attention.py  base.py  conv.py  dense.py  dropout.py  embedding.py  flatten.py  norm.py  pool.py  projection.py  recurrent.py  reshape.py  residual.py
src/neural_blueprints/config/utils/: __init__.py
src/neural_blueprints/convolutional/: __init__.py  cnn.py  unet.py
src/neural_blueprints/datasets/: __init__.py  base.py  masked_tabular_dataset.py  tabular.py  tabular_dataset.py
src/neural_blueprints/datasets/schemas/: __init__.py  base.py  multimodal.py  unimodal.py
src/neural_blueprints/feedforward/: __init__.py  autoencoder.py  mlp.py
src/neural_blueprints/preprocess/: __init__.py  tabular_preprocess.py
src/neural_blueprints/recurrent/: __init__.py  rnn.py  seq2seq.py
src/neural_blueprints/transformer/: __init__.py  bert.py  gpt.py  t5.py  transformer_base.py  vit.py
src/neural_blueprints/types/: __init__.py  base.py  modal_dim.py  modalities.py  proj_dim.py  sample.py  spec.py
src/neural_blueprints/utils/: __init__.py  activation.py  blocks.py  config.py  criterion.py  device.py  get_projection.py  inference.py  layer_type.py  metrics.py  normalization.py  optimizer.py  predict.py  preprocess.py  trainer.py  training.py  types.py  visualize.py
src/neural_blueprints/utils/epochs/: __init__.py  eval.py  train.py
src/neural_blueprints/utils/inference/: __init__.py  eval.py  predict.py  train.py
(+15 files in other folders)
