[project]
name = "neural-blueprints"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Noe Jager", email = "noe.p.jager@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neural_blueprints"]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
